--- a/8-18日志.md
+++ b/8-18日志.md
@@ -64,7 +64,7 @@ hexo new '文件名'
 
 ### 3 、创建一个新仓库
 
-![image-20210818162123510](images/image-20210818162123510.png)
+![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/1.png)
 
 ### 3、克隆仓库 
 
@@ -72,11 +72,11 @@ hexo new '文件名'
 git clone git@github.com:hepeng999/cdn.git
 ```
 
-![image-20210818162345729](images/image-20210818162345729.png)
+![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/2.png)hepeng999/cdn/img/2.png)
 
-![image-20210818162430289](images/image-20210818162430289.png)
+![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/4.png)
 
-### 5、提交到github
+### 4、提交到github
 
 ```js
 git add .
@@ -84,7 +84,7 @@ git commit - m '添加图片到cdn'
 git push origin master 
 ```
 
-### 4、利用jsDliver进行cdn加速
+### 5、利用jsDliver进行cdn加速
 
 
 
