--- a/8-18日志.md
+++ b/8-18日志.md
@@ -72,7 +72,7 @@ hexo new '文件名'
 git clone git@github.com:hepeng999/cdn.git
 ```
 
-![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/2.png)hepeng999/cdn/img/2.png)
+![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/2.png)
 
 ![image-20210818162123510](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/4.png)
 
