--- a/8-18日志.md
+++ b/8-18日志.md
@@ -98,11 +98,11 @@ ssh-keygen -t rsa -C '1132795502@qq.com'
 
 2、系统会在c盘>用户文件>.ssh中生成俩个文件 一个私有密钥 一个共有密钥
 
-![image-20210818173112657](images/image-20210818173112657.png)
+![image-20210818173112657](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/5.png)
 
 3、把共有密钥的代码复制下来在github网站中修改 ，在setting（设置中）找到SSHandGPG keys 添加一个新的SSH密钥（刚才复制好的密钥代码）复制进去即可
 
-![image-20210818173706107](images/image-20210818173706107.png)
+![image-20210818173706107](https://cdn.jsdelivr.net/gh/hepeng999/cdn/img/6.png)
 
 
 
